MainActivity Design Done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Geet</string>
+    <string name="let_s_listen_music">Let\'s Listen Music..!</string>
 </resources>
